--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
   <title>Continue Now</title>
 
   <!-- ✅ Meta Aman untuk Facebook -->
-  <meta name="description" content=" Klik di bawah untuk melanjutkan ">
+  <meta name="description" content=" Klik tombol di bawah untuk melanjutkan ">
   <meta property="og:title" content="Continue ">
-  <meta property="og:description" content="Klik di bawah untuk melanjutkan ">
+  <meta property="og:description" content="Klik tombol di bawah untuk melanjutkan ">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://i.imgur.com/7JeJ7cn.jpeg">
   <meta property="og:url" content="https://example.com">
-  <meta name="robots" content="noindex, nofollow">
 
-  <!-- ✅ Favicon Aman (ikon umum) -->
+  <!-- ✅ Thumbnail Aman (tidak dihapus Facebook) -->
+  <meta property="og:image" content="https://i.imgur.com/7JeJ7cn.jpeg">
+
+  <!-- ✅ Favicon Aman -->
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/565/565547.png" type="image/png">
+
+  <meta name="robots" content="noindex, nofollow">
 
   <style>
     body {
@@ -74,7 +77,6 @@
   <a class="btn" href="https://miu189.github.io/xjme.videos/" target="_blank">
     MY PRIVAT VIDEOS
   </a>
-
   <a class="btn" href="https://www.effectivegatecpm.com/wkj2qmku?key=469be1ba075a153196aae2fe5b0810c7" target="_blank">
     CLICK HERE TO CONTINUE
   </a>
@@ -85,4 +87,4 @@
   <script data-cfasync="false" type="text/javascript" src="//pl27835564.effectivegatecpm.com/02/db/a6/02dba6e85764a446e8a4c32a16c42894.js"></script>
 
 </body>
-    </html>
+</html>
